--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,19 @@
                     </archive>
                 </configuration>
             </plugin>
-
         </plugins>
-
     </build>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations-java5</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 
 </project>
